@@ -120,16 +120,16 @@ namespace MonoDevelop.Projects.Dom.Serialization
 
 		internal override void OnProjectReferenceAdded (ProjectReference pref)
 		{
-			base.OnProjectReferenceAdded (pref);
 			ProjectCodeCompletionDatabase db = (ProjectCodeCompletionDatabase) database;
 			db.UpdateFromProject ();
+			this.UpdateReferences ();
 		}
 
 		internal override void OnProjectReferenceRemoved (ProjectReference pref)
 		{
-			base.OnProjectReferenceRemoved (pref);
 			ProjectCodeCompletionDatabase db = (ProjectCodeCompletionDatabase) database;
 			db.UpdateFromProject ();
+			this.UpdateReferences ();
 		}
 
 		internal override void CheckModifiedFiles ()
