@@ -1,3 +1,10 @@
+2008-10-31  Full Name  <Email Address>
+
+	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
+	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
+	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
+	fixed 'Bug 436879 - 'exe' references not added to code completion'.
+
 2008-10-31  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom/DomType.cs:
